--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,16 @@
 
-
-
 body {
+  font-family: trebuchet, helvetica, sans-serif;
   text-align: center;
+}
+
+h1 a {
+  text-decoration: none;
 }
 
 h3, h4, h5 {
   text-align: left;
+  text-decoration: underline;
 }
 
 
