--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,9 @@ body {
 h1 a {
   text-decoration: none;
 }
-
+h1, h2 {
+  font-variant: small-caps;
+}
 h3, h4, h5 {
   text-align: left;
   text-decoration: underline;
