--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 body {
   font-family: trebuchet, helvetica, sans-serif;
   text-align: center;
+  padding: 48px 24px 24px;
+}
+
+.container-lg {
+  max-width: 980px;
+  margin: auto;
 }
 
 h1 a {
