--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,4 +21,12 @@ h3, h4, h5 {
   text-decoration: underline;
 }
 
+iframe {
+  max-width: 100%;
+}
 
+@media screen and (max-width: 640px) {
+  h3, h4, h5 {
+    margin: 1em -12px;
+  }
+}
