--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,9 @@ h2 {
 h1, h2 {
   font-variant: small-caps;
 }
+h4 {
+  margin: 0 0 0.5em 2em;
+}
 h3, h4, h5 {
   text-align: left;
   text-decoration: underline;
